# Contract_Guard

./: .env.example  .gitignore  ARCHITECTURE.md  IMPACT_MODEL.md  README.md  SCENARIO_MAPPING.md  pyproject.toml
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ClauseCard.tsx  ErrorBoundary.tsx  ExecutionLogs.tsx  InputPanel.tsx  PipelineVisualizer.tsx  ResultsDashboard.tsx  RiskGauge.tsx
frontend/src/lib/: api.ts  demoData.ts  utils.ts
src/contractguard/: __init__.py  api.py  config.py
src/contractguard/core/: __init__.py  constants.py
src/contractguard/demo/: __init__.py  error_recovery.py
src/contractguard/models/: __init__.py  audit.py  business.py  clauses.py  state.py
src/contractguard/pipeline/: graph.py
src/contractguard/pipeline/agents/: __init__.py  a1_doc_intelligence.py  a2_business_profiler.py  a3_risk_scorer.py  a4_compliance_guard.py  a5_negotiation_agent.py  a6_audit_trail.py  a7_lifecycle_monitor.py  autonomy_loop.py
src/contractguard/scoring/: __init__.py  formula.py  msme_act.py
src/contractguard/scripts/: __init__.py  seed_chroma.py
src/contractguard/workflow/: meeting_agent.py
tests/: test_api.py  test_pipeline.py  test_scoring.py
tests/sample_contracts/: test_contract.txt
